--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".ShowActivity"></activity>
         <activity android:name=".PekiActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
