--- a/MyApplication/local.properties
+++ b/MyApplication/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 08 12:01:35 MSK 2021
-sdk.dir=C\:\\Users\\Roma\\AppData\\Local\\Android\\Sdk
+#Wed Apr 07 12:53:58 MSK 2021
+sdk.dir=D\:\\1
